make it responsive to the phone size

--- a/styleguide.html
+++ b/styleguide.html
@@ -22,22 +22,28 @@
     </header>
 
 
-      <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="styleguide.html">CeliaX</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav navbar-right">
+    <!-- this nav bar is learnd from https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_theme_band_complete&stacked=h -->
+          <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="styleguide.html">CeliaX</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+              <ul class="nav navbar-nav navbar-right">
 
-            <li><a href="home.html"><b>Home</b></a></li>
-            <li><a href="product.html"><b>Product</b></a></li>
-            <li><a href="ux.html"><b>UX</b></a></li>
+                <li><a href="home.html"><b>Home</b></a></li>
+                <li><a href="product.html"><b>Product</b></a></li>
+                <li><a href="ux.html"><b>UX</b></a></li>
 
-          </ul>
-        </div>
-      </div>
-    </nav>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
 
 
@@ -144,13 +150,13 @@
 
     </section>
     <!-- FOOTER START -->
-      <div class="footer">
-        <div class="contain">
-          <footer>
-            <p> © 2019 Spring IAT - 339 Celia Xu </p>
-          </footer>
-        </div>
+    <div class="footer">
+      <div class="contain">
+        <footer>
+          <p><a href="contact.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+        </footer>
       </div>
+    </div>
 
 
   </body>
