--- a/home.html
+++ b/home.html
@@ -17,10 +17,15 @@
 
   <body>
 
-
+<!-- this nav bar is learnd from https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_theme_band_complete&stacked=h -->
       <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
           <a class="navbar-brand" href="styleguide.html">CeliaX</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -72,7 +77,7 @@
       <div class="footer">
         <div class="contain">
           <footer>
-            <p> © 2019 Spring IAT - 339 Celia Xu </p>
+            <p><a href="contact.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
           </footer>
         </div>
       </div>
