--- a/product.html
+++ b/product.html
@@ -16,24 +16,28 @@
   </head>
 
   <body>
+    <!-- this nav bar is learnd from https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_theme_band_complete&stacked=h -->
+          <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="styleguide.html">CeliaX</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+              <ul class="nav navbar-nav navbar-right">
 
+                <li><a href="home.html"><b>Home</b></a></li>
+                <li><a href="product.html"><b>Product</b></a></li>
+                <li><a href="ux.html"><b>UX</b></a></li>
 
-      <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="styleguide.html">CeliaX</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav navbar-right">
-
-            <li><a href="home.html"><b>Home</b></a></li>
-            <li><a href="product.html"><b>Product</b></a></li>
-            <li><a href="ux.html"><b>UX</b></a></li>
-
-          </ul>
-        </div>
-      </div>
-    </nav>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
 
     <section id="bio">
@@ -64,7 +68,7 @@
       <img src="img/h4.png" alt="">
       </div>
     </section>
-    
+
     <section id="ux" class="clearfix">
       <div class="p1 box4">
       <img src="img/h5.png" alt="">
@@ -82,14 +86,13 @@
 
 
     <!-- FOOTER START -->
-      <div class="footer">
-        <div class="contain">
-          <footer>
-            <p> © 2019 Spring IAT - 339 Celia Xu </p>
-          </footer>
-        </div>
+    <div class="footer">
+      <div class="contain">
+        <footer>
+          <p><a href="contact.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+        </footer>
       </div>
-
+    </div>
 
   </body>
 </html>
