align fix and image fix, add contact page

--- a/product.html
+++ b/product.html
@@ -25,7 +25,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="styleguide.html">CeliaX</a>
+              <a class="navbar-brand" >CeliaX</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav navbar-right">
@@ -33,6 +33,7 @@
                 <li><a href="home.html"><b>Home</b></a></li>
                 <li><a href="product.html"><b>Product</b></a></li>
                 <li><a href="ux.html"><b>UX</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
 
               </ul>
             </div>
@@ -59,9 +60,8 @@
 
     <section id="ux" class="clearfix">
       <div class="pp2 box">
-      <h2 class="homeh2"><strong>Process & challenge</strong></h2>
-      <p class="homelist2"><br>In starting this project, I and my group members discussed a long time to determine the shape of the bookshelf and what kind of sensor we could use to improve the usability. In this project, we used three kind of sensors, which are light sensor, proximity sensor, and Pan-tilt motor. The main function of this bookshelf is it can interactive with the light. I considered a lot on the shape of the bookshelf. For example, it could hide all circuits; it needs to be able to withstand weight steadily; it must be small and pretty because it will be placed on the headboard. That's why the shape of the bookshelf is an asymmetrical house.</br>
-      <br>At the beginning , we wanted to use proximity sensor for measuring the distance between people and the shelf. But we found that some small movements of people will also affect the sensitivity of the sensor, which will make it flash from time to time. So we changed the sensor put on the "roof" of the bookshelf. This roof can act as a large bookmark so that both books can be placed and lights can be controlled.</br>
+      <h2 class="homeh2_p"><strong>Process & challenge</strong></h2>
+      <p class="homelist2_p">In starting this project, I and my group members discussed a long time to determine the shape of the bookshelf and what kind of sensor we could use to improve the usability. In this project, we used three kind of sensors, which are light sensor, proximity sensor, and Pan-tilt motor. The main function of this bookshelf is it can interactive with the light. I considered a lot on the shape of the bookshelf. For example, it could hide all circuits; it needs to be able to withstand weight steadily; it must be small and pretty because it will be placed on the headboard. That's why the shape of the bookshelf is an asymmetrical house. At the beginning , we wanted to use proximity sensor for measuring the distance between people and the shelf. But we found that some small movements of people will also affect the sensitivity of the sensor, which will make it flash from time to time. So we changed the sensor put on the "roof" of the bookshelf. This roof can act as a large bookmark so that both books can be placed and lights can be controlled.
       </p>
       </div>
       <div class="pp1 box">
@@ -89,7 +89,7 @@
     <div class="footer">
       <div class="contain">
         <footer>
-          <p><a href="contact.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+          <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
         </footer>
       </div>
     </div>
