--- a/styleguide.html
+++ b/styleguide.html
@@ -12,6 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
   </head>
 
@@ -153,7 +154,7 @@
     <div class="footer">
       <div class="contain">
         <footer>
-          <p><a href="contact.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+          <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
         </footer>
       </div>
     </div>
