--- a/ux.html
+++ b/ux.html
@@ -26,7 +26,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="styleguide.html">CeliaX</a>
+              <a class="navbar-brand" >CeliaX</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav navbar-right">
@@ -34,6 +34,7 @@
                 <li><a href="home.html"><b>Home</b></a></li>
                 <li><a href="product.html"><b>Product</b></a></li>
                 <li><a href="ux.html"><b>UX</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
 
               </ul>
             </div>
@@ -104,7 +105,7 @@
     <div class="footer">
       <div class="contain">
         <footer>
-          <p><a href="contact.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+          <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
         </footer>
       </div>
     </div>
