--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="styleguide.html">CeliaX</a>
+          <a class="navbar-brand">CeliaX</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
@@ -34,6 +34,7 @@
             <li><a href="home.html"><b>Home</b></a></li>
             <li><a href="product.html"><b>Product</b></a></li>
             <li><a href="ux.html"><b>UX</b></a></li>
+            <li><a href="contact.html"><b>Contact</b></a></li>
 
           </ul>
         </div>
@@ -44,9 +45,11 @@
     <section id="bio">
       <h1 class="bioname">Celia Xu</h1>
       <h3 class="biosub">Contact me</h3>
-      <br><p class="aboutme">Email: celiax@sfu.ca</p></br>
-      <br><p class="aboutme">Phone: 778-782-7400</p></br>
-      <br><p class="aboutme">Address: 250-13450 102nd Avenue, Surrey, B.C., Canada V3T 0A3</p></br>
+      <div class="contactpart">
+      <br><p class="contact">Email: celiax@sfu.ca</p></br>
+      <br><p class="contact">Phone: 778-782-7400</p></br>
+      <br><p class="contact">Address: 250-13450 102nd Avenue, Surrey, B.C., Canada V3T 0A3</p></br>
+    </div>
     </section>
 
     <section>
@@ -58,7 +61,7 @@
       <div class="footer">
         <div class="contain">
           <footer>
-            <p><a href="contact.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+            <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
           </footer>
         </div>
       </div>
