--- a/styleguide.html
+++ b/styleguide.html
@@ -12,7 +12,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
   </head>
 
@@ -32,7 +31,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="styleguide.html">CeliaX</a>
+              <a class="navbar-brand">CeliaX</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav navbar-right">
@@ -40,6 +39,7 @@
                 <li><a href="home.html"><b>Home</b></a></li>
                 <li><a href="product.html"><b>Product</b></a></li>
                 <li><a href="ux.html"><b>UX</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
 
               </ul>
             </div>
