--- a/home.html
+++ b/home.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 
   <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>P03 - Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -78,7 +81,7 @@
       <div class="footer">
         <div class="contain">
           <footer>
-            <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+            <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu - Styleguide</a></p>
           </footer>
         </div>
       </div>
