--- a/product.html
+++ b/product.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>P03 - Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
@@ -69,7 +70,7 @@
       </div>
     </section>
 
-    <section id="ux" class="clearfix">
+    <div class="clearfix">
       <div class="p1 box2">
       <img src="img/h5.png" alt="">
       </div>
@@ -82,14 +83,14 @@
       <div class="p1 box4">
       <img src="img/h3.png" alt="">
       </div>
-    </section>
+    </div>
 
 
     <!-- FOOTER START -->
     <div class="footer">
       <div class="contain">
         <footer>
-          <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+          <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu - Styleguide</a></p>
         </footer>
       </div>
     </div>
