--- a/styleguide.html
+++ b/styleguide.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>P03 - Style Guide Template</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
@@ -61,18 +62,83 @@
       <!-- Default Button styling section -->
       <section class="element">
 
-        <h3>Navigation Link</h3>
-        <p>See the top</p>
+        <h3>Navigation bar</h3>
 
         <h4>CSS selector:</h4>
-        <p>.btn</p>
+        <p>.navbar<br> .navbar-default <br>.navbar-fixed-top<br>.container-fluid<br>.navbar-header<br>#myNavbarbr<br><br>
+        </p>
 
         <h4>Sample code:</h4>
-        <code>&lt;a class="btn" href="product.html" &gt;See more&lt;/a&gt;</code>
 
-        <h4>Rendered element:</h4>
-        <a class="btn" href="product.html">See more</a>
+        <code>
+              &lt;nav class="navbar navbar-default navbar-fixed-top"&gt;
+            </code>
+        <code>
+              &lt;div class="container-fluid"&gt;
+            </code>
+        <code>
+              &lt;div class="navbar-header"&gt;
+            </code>
+        <code>
+              &lt;button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"&gt;
+            </code>
+        <code>
+              &lt;span class="icon-bar"&gt;&lt;/span&gt;
+            </code>
+        <code>
+              &lt;span class="icon-bar"&gt;&lt;/span&gt;
+            </code>
+        <code>
+              &lt;span class="icon-bar"&gt;&lt;/span&gt;
+            </code>
+        <code>
+              &lt;/button&gt;
+            </code>
+        <code>
+              &lt;a class="navbar-brand"&gt;Celia X&lt;/a&gt;
+            </code>
+        <code>
+              &lt;/div&gt;
+            </code>
+        <code>
+              &lt;div class="collapse navbar-collapse" id="myNavbar"&gt;
+            </code>
+        <code>
+              &lt;b&gt;
+            </code>
+        <code>
+              &lt;ul class="nav navbar-nav navbar-right"&gt;
+            </code>
+        <code>
+              &lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
+            </code>
+        <code>
+              &lt;li&gt;&lt;a href="product.html"&gt;Product&lt;/a&gt;&lt;/li&gt;
+            </code>
+        <code>
+              &lt;li&gt;&lt;a href="ux.html"&gt;UX&lt;/a&gt;&lt;/li&gt;
+            </code>
+        <code>
+              &lt;li&gt;&lt;a href="contact.html"&gt;Contact&lt;/a&gt;&lt;/li&gt;
+            </code>
+        <code>
+              &lt;/ul&gt;
+            </code>
+        <code>
+              &lt;/b&gt;
+            </code>
+        <code>
 
+              &lt;/div&gt;
+            </code>
+        <code>
+              &lt;/div&gt;
+            </code>
+        <code>
+              &lt;/nav&gt;
+
+        </code>
+        <h4>Rendered element: See the top.</h4>
       </section>
 
 
@@ -93,7 +159,7 @@
 
       <section class="element">
         <h3>Image</h3>
-        <img src="img/p1.jpg" alt="">
+        <img src="img/p1.jpg" alt="" width=50%>
       </section>
 
 
@@ -146,7 +212,16 @@
 
       <ul>
         <li>Matteson, Steve. Designer. 2011. <strong>Open Sans [Font]</strong>. Retrieved from <a href="https://www.google.com/fonts#QuickUsePlace:quickUse/Family:Open+Sans">https://www.google.com/fonts#QuickUsePlace:quickUse/Family:Open+Sans</a></li>
-        <li>Creator. (Role). (Year). <strong>Title [Media]</strong>. Retrieved from <a href="#">URL</a>.</li>
+        <li>Nav bar: <a
+            href="https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_theme_band_complete&stacked=h">URL</a>.
+        </li>
+        <li>Float Tutorial: <a href="https://www.w3schools.com/css/css_float.asp">URL</a>.</li>
+        <li>Home page images Resources:
+          <br><a href="https://www.getit.co.il/Products/Huge/96795.jpg">URL1</a>.</br>
+          <a href="https://i.pinimg.com/originals/62/6a/bd/626abd32c0a26026e1efd2e225970054.jpg">URL2</a>.
+        </li>
+        <li>Contact Form Tutorial: <a href="https://www.w3schools.com/howto/howto_css_contact_section.asp">URL</a>.</li>
+        <li>Github: <a href="https://www.w3schools.com/howto/howto_css_contact_section.asp">URL</a>.</li>
       </ul>
 
     </section>
