--- a/ux.html
+++ b/ux.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>P03 - Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
@@ -70,22 +71,22 @@
       </div>
     </section>
 
-    <section id="product" class="clearfix">
+    <section id="product1" class="clearfix">
       <div class="p2 box">
       <h2 class="homeh2"><strong>Preliminary investigation</strong></h2>
-      <p class="homelist1"><br>Since we are not 100% aware of UBC Orchard Garden's usual activities, we feel that it is feasible to understand the expectations and needs of members in this organization, which means we want to the members' perspective to collect the useful data and help them improve the garden.</br>
-        <br>At the first, we synthesized main members' information. The data we collected help us to have a clear image of each member and what's their expectation. It would be considered in our next brainstorming process.</br>
+      <p class="homelist1">Since we are not 100% aware of UBC Orchard Garden's usual activities, we feel that it is feasible to understand the expectations and needs of members in this organization, which means we want to the members' perspective to collect the useful data and help them improve the garden.<br />
+        <br />At the first, we synthesized main members' information. The data we collected help us to have a clear image of each member and what's their expectation. It would be considered in our next brainstorming process.
       </p>
       </div>
-      <div class="p2 box">
-      <h2 class="homeh2"><strong> </strong></h2>
-      <p class="homelist1"><br>After that, we use cultural prob to collect their idea of changing the garden. Our design focus at this time was to design a new outdoor feature to utilize the empty space near the entrance of the garden space. Sometimes, people’s ideas cannot be expressed in full by words, so we have added more ways to stimulate their ideas by drawing and photographing. For example, I draw a digital map in Illustrator and use this user map to identify their joys and pain points in the garden space. We also use moodboards to encourage them draw their ideal garden.</br>
-        <br>The cultural prob works very well. It not only allows members to expand their thinking, but also allows everyone to share their ideas to each other in the process.</br>
+      <div class="p2 boxux">
+      <h2 class="homeh2"></h2>
+      <p class="homelist1">After that, we use cultural prob to collect their idea of changing the garden. Our design focus at this time was to design a new outdoor feature to utilize the empty space near the entrance of the garden space. Sometimes, people’s ideas cannot be expressed in full by words, so we have added more ways to stimulate their ideas by drawing and photographing. For example, I draw a digital map in Illustrator and use this user map to identify their joys and pain points in the garden space. We also use moodboards to encourage them draw their ideal garden.<br />
+        <br />The cultural prob works very well. It not only allows members to expand their thinking, but also allows everyone to share their ideas to each other in the process.
       </p>
       </div>
     </section>
 
-    <section id="ux" class="clearfix">
+    <div class="clearfix">
       <div class="p1 box2">
       <img src="img/u3.jpg" alt="">
       </div>
@@ -98,14 +99,14 @@
       <div class="p1 box4">
       <img src="img/u6.jpg" alt="">
       </div>
-    </section>
+    </div>
 
 
     <!-- FOOTER START -->
     <div class="footer">
       <div class="contain">
         <footer>
-          <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu </a></p>
+          <p><a href="styleguide.html"> © 2019 Spring IAT - 339 Celia Xu - Styleguide</a></p>
         </footer>
       </div>
     </div>
