github link added

--- a/styleguide.html
+++ b/styleguide.html
@@ -221,7 +221,7 @@
           <a href="https://i.pinimg.com/originals/62/6a/bd/626abd32c0a26026e1efd2e225970054.jpg">URL2</a>.
         </li>
         <li>Contact Form Tutorial: <a href="https://www.w3schools.com/howto/howto_css_contact_section.asp">URL</a>.</li>
-        <li>Github: <a href="https://www.w3schools.com/howto/howto_css_contact_section.asp">URL</a>.</li>
+        <li>Github: <a href="https://github.com/celiagit/P3">URL</a>.</li>
       </ul>
 
     </section>
