--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
     <!-- https://www.w3schools.com/css/css_float.asp -->
     <section id="product" class="clearfix">
       <div class="p1 box">
-      <img src="img/p1.jpg" alt="">
+      <a href="project.html"><img src="img/p1.jpg" alt=""></a>
       </div>
       <div class="p2 box">
       <h2 class="homeh2"><strong>Hikari</strong></h2>
@@ -72,7 +72,7 @@
       <a class="btn" href="ux.html">See more</a>
       </div>
       <div class="pp1 box">
-      <img src="img/p2.jpg" alt="">
+      <a href="ux.html"><img src="img/p2.jpg" alt=""></a>
       </div>
     </section>
 
