--- a/styleguide.html
+++ b/styleguide.html
@@ -142,17 +142,46 @@
       </section>
 
 
-      <!-- <section class="element">
-        <h3>Submit/Reset Buttons</h3>
-      </section>
-
-
       <section class="element">
         <h3>Text Input Field with Label</h3>
+        <h4>CSS selector:</h4>
+        <p>.container<br> .btn2 <<br>
+        </p>
+
+        <h4>Sample code:</h4>
+        <code>&lt;div class="container"&gt;</code>
+        <code>&lt;label for="fname"&gt;First Name&lt;/label&gt;</code>
+        <code>&lt;input type="text" id="fname" name="firstname" placeholder="First name.."&gt;</code>
+
+        <code>&lt;label for="lname"&gt;Last Name&lt;/label&gt;</code>
+        <code>&lt;input type="text" id="lname" name="lastname" placeholder="Last name.."&gt;</code>
+        <code>&lt;label for="email"&gt;Email&lt;/label&gt;</code>
+        <code>&lt;input type="text" id="email" name="emialaddress" placeholder="Email address.."&gt;</code>
+        <code>&lt;label for="subject"&gt;Message&lt;/label&gt;</code>
+        <code>&lt;textarea id="subject" name="subject" placeholder="Leave your message.." style="height:200px"&gt;&lt;/textarea&gt;</code>
+
+        <code>&lt;a class="btn2" href="home.html"&gt;Submit&lt;/a&gt;</code>
+        <code>&lt;/div&gt;</code>
+
+        <h4>Rendered element:</h4>
+        <div class="container">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="First name..">
+
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Last name..">
+        <label for="email">Email</label>
+        <input type="text" id="email" name="emialaddress" placeholder="Email address..">
+        <label for="subject">Message</label>
+        <textarea id="subject" name="subject" placeholder="Leave your message.." style="height:200px"></textarea>
+
+        <a class="btn2" href="home.html">Submit</a>
+    </div>
       </section>
 
 
-      <section class="element">
+
+      <!--<section class="element">
         <h3>Radio Button with Label</h3>
       </section>-->
 
